change scrollbar and fix styles

--- a/src/Components/film/_film.scss
+++ b/src/Components/film/_film.scss
@@ -43,7 +43,7 @@
   }
   &__name {
     width: 100%;
-    padding-top: 10px;
+    padding: 10px 0;
     font-size: 28px;
   }
   &__like {
