--- a/src/Components/filmPage/_filmPage.scss
+++ b/src/Components/filmPage/_filmPage.scss
@@ -1,3 +1,5 @@
+@use "../../styles/base/vars" as v;
+
 .movie {
   position: relative;
   padding-bottom: 100px;
@@ -102,6 +104,18 @@
       overflow-x: auto;
       padding-top: 20px;
       margin: 0 auto;
+      &::-webkit-scrollbar {
+        width: 15px;
+      }
+      &::-webkit-scrollbar-track {
+        background: v.$page-bg-accent;
+        border-radius: 20px;
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: v.$accent;
+        border-radius: 20px;
+        border: 3px solid v.$page-bg-accent;
+      }
     }
   }
   &__actor {
@@ -110,11 +124,13 @@
     &--img {
       width: 100%;
       height: 250px;
+      border-radius: 10px;
       object-fit: cover;
     }
     &--name {
       width: 100%;
       text-align: center;
+      padding: 10px 0;
     }
   }
 }
