--- a/src/Components/player/_player.scss
+++ b/src/Components/player/_player.scss
@@ -8,8 +8,21 @@
   &__types {
     display: flex;
     gap: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
     overflow-x: auto;
+    &::-webkit-scrollbar {
+      width: 15px;
+    }
+    &::-webkit-scrollbar-track {
+      background: v.$page-bg-accent;
+      border-radius: 20px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: v.$accent;
+      border-radius: 20px;
+      border: 3px solid v.$page-bg-accent;
+    }
   }
   &__type {
     transition: 0.2s ease-out;
